js262/test/language/literals/regexp/S7.8.5_A2.5_T1.js


/*---
esid: prod-RegularExpressionBackslashSequence
info: |
  RegularExpressionBackslashSequence ::
    \ RegularExpressionNonTerminator

  RegularExpressionNonTerminator ::
    SourceCharacter but not LineTerminator

  LineTerminator ::
    <LF>
    <CR>
    <LS>
    <PS>

description: >
  A regular expression may not contain a <LF> as a SourceCharacter
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/a\
/
